# AutomationTest

./: .gitignore  bbf.drawio
02-classroom/: 01-lists.robot  exam_results.json  students.txt  yet_another_results_file.txt
02-classroom/libraries/: HelperLibrary.py  JSONLibrary.py
02-classroom/libraries/helper_robot/: Cargo.toml
02-classroom/libraries/helper_robot/src/: lib.rs
02-classroom/resources/: lists.resource
03-remote/: 01-connection.robot
03-remote/resources/: apk-management.resource
BasicSyntax/Greeting/: __init__.robot  basic.robot  log.html  output.xml  report.html
BasicSyntax/Greeting/resource/: greeting.resource
HelloWorld/: hello.robot  log.html  output.xml  report.html
Login_Website/: login.robot
